// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render ExpensesSummary with 2 expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     
     expenses
     totalling 
    3526.3
  </p>
</div>
`;

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
     expense
     totalling 
    256.35
  </p>
</div>
`;
